ultimos cambios clase 3

--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>Mi primera web app :D</title>
-	<link rel="stylesheet" type="text/css" href="normalize.css">
-	<link rel="stylesheet" type="text/css" href="estilos.css">
+
+	<meta name="viewport" 
+		  content="width=device-width, initial-scale=1, maximum-scale=1" />
+
+	<title>Puls3: Comunidad online de gente pro y (no sé que más escribir)</title>
+	<link rel="stylesheet" href="normalize.css" />
+	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css' />
+	<link rel="stylesheet" href="estilos.css" />
+	<link rel="stylesheet" href="responsive.css" />
 </head>
 <!-- este es un comentario -->
 <body>
@@ -15,14 +21,12 @@
 		<h1 id="titulo_header">Puls3: Comunidad de gente cool, atractiva y millonaria</h1>
 		<figure id="avatar">
 			<img src="imagenes/avatar.jpg">
-			<figcaption>
-				*
-			</figcaption>
+			<figcaption></figcaption>
 		</figure>
 	</header>
 	<nav>
 		<ul>
-			<li id="flechita_nav"><a href="#">*</a></li>
+			<li id="flechita_nav"><a href="#"></a></li>
 			<li><a href="#">Python</a></li>
 			<li><a href="#">HTML5</a></li>
 			<li><a href="#">Javascript</a></li>
@@ -43,15 +47,15 @@
 				Por <a href="#">Elizabeth Tobar</a>
 			</p>
 			<p class="datos_item">
-				<a class="tag_item" href="">categoria</a>
+				<a class="tag_item" href="#">categoria</a>
 				<span class="fecha_item">Hace <strong>5</strong> min</span>
-				<a class="cometarios_item" href="#">455</a>
-				<a class="guardar_item" href="#">*</a>			
+				<a class="comentarios_item" href="#">455</a>
+				<a class="guardar_item" href="#"></a>			
 			</p>
 			<p class="votacion">
-				<a class="up" href="#">Up</a>
+				<a class="up" href="#"></a>
 				3141
-				<a class="down" href="#">Down</a>
+				<a class="down" href="#"></a>
 			</p>
 		</article>
 	</section>
